Question 1 - Issue 3: Links in the footer are only identified as links using colour. I changed the styling to a different colour that satifies the contrast ratio of higher than 4.5:1 and I included underlying to show that it is a link. I also have the colour change on hover to make it clear.

--- a/styles/before-main.css
+++ b/styles/before-main.css
@@ -84,3 +84,13 @@ a:hover, a:focus, input:focus {
   outline: none;
   border-color: transparent;
 }
+
+
+.bright-link {
+  color: #00f134;
+  text-decoration: underline;
+}
+
+.bright-link:hover{
+  color: rgb(211, 210, 210);
+}
